--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
+    "firebase": "^8.3.2",
     "react": "^17.0.2",
     "react-animated-css": "^1.2.1",
     "react-bootstrap": "^1.5.2",
