--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-videojs-hook": "^1.0.1",
+    "video.js": "^7.11.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
